markdown/framework/7.0.3/integration/aot-cache.md
---
title: "JVM AOT Cache"
source: "ROOT:integration/aot-cache.adoc"
---

<a id="aot-cache"></a>

# JVM AOT Cache

The ahead-of-time cache is a JVM feature introduced in Java 24 via
[JEP 483](https://openjdk.org/jeps/483) that can help reduce the startup time and memory
footprint of Java applications. AOT cache is a natural evolution of
[Class Data Sharing (CDS)](https://docs.oracle.com/en/java/javase/17/vm/class-data-sharing.html).
Spring Framework supports both CDS and AOT cache, and it is recommended that you use the
latter if available in the JVM version you are using (Java 24+).

To use this feature, an AOT cache should be created for the particular classpath of the
application. It is possible to create this cache on the deployed instance, or during a
training run performed for example when packaging the application thanks to a hook-point
provided by the Spring Framework to ease such use case. Once the cache is available, users
should opt in to use it via a JVM flag.

> [!NOTE]
> If you are using Spring Boot, it is highly recommended to leverage its
> [executable JAR unpacking support](https://docs.spring.io/spring-boot/reference/packaging/efficient.html#packaging.efficient.unpacking)
> which is designed to fulfill the class loading requirements of both the AOT cache and CDS.

<a id="_creating_the_cache"></a>

## Creating the cache

An AOT cache can typically be created when the application exits. The Spring Framework
provides a mode of operation where the process can exit automatically once the
`ApplicationContext` has refreshed. In this mode, all non-lazy initialized singletons
have been instantiated, and `InitializingBean#afterPropertiesSet` callbacks have been
invoked; but the lifecycle has not started, and the `ContextRefreshedEvent` has not yet
been published.

To create the cache during the training run, it is possible to specify the `-Dspring.context.exit=onRefresh`
JVM flag to start and then exit your Spring application once the
`ApplicationContext` has refreshed:

#### AOT cache (Java 25+)

```bash
java -XX:AOTCacheOutput=app.aot -Dspring.context.exit=onRefresh -jar application.jar ...
```

#### AOT cache (Java 24)

```bash
# Both commands need to be run with the same classpath
java -XX:AOTMode=record -XX:AOTConfiguration=app.aotconf -Dspring.context.exit=onRefresh ...
java -XX:AOTMode=create -XX:AOTConfiguration=app.aotconf -XX:AOTCache=app.aot ...
```

#### CDS

```bash
# To create a CDS archive, your JDK/JRE must have a base image
java -XX:ArchiveClassesAtExit=app.jsa -Dspring.context.exit=onRefresh ...
```

> [!NOTE]
> With Java 25+, AOT cache stores, among other things, the
> [method profiling information](https://openjdk.org/jeps/515). Therefore, to benefit of this capability,
> it is recommended to create an AOT cache for an application that experienced a portion of a
> production-like workflow instead of using the `-Dspring.context.exit=onRefresh` flag which designed to
> optimize only the startup of your application.

<a id="_using_the_cache"></a>

## Using the cache

Once the cache file has been created, you can use it to start your application faster:

#### AOT cache

```bash
# With the same classpath (or a superset) tan the training run
java -XX:AOTCache=app.aot ...
```

#### CDS

```bash
# With the same classpath (or a superset) tan the training run
java -XX:SharedArchiveFile=app.jsa ...
```

Pay attention to the logs and the startup time to check if the AOT cache is used successfully.
To figure out how effective the cache is, you can enable class loading logs by adding
an extra attribute: `-Xlog:class+load:file=aot-cache.log`. This creates an `aot-cache.log` with
every attempt to load a class and its source. Classes that are loaded from the cache should have
a "shared objects file" source, as shown in the following example:

```shell
[0.151s][info][class,load] org.springframework.core.env.EnvironmentCapable source: shared objects file
[0.151s][info][class,load] org.springframework.beans.factory.BeanFactory source: shared objects file
[0.151s][info][class,load] org.springframework.beans.factory.ListableBeanFactory source: shared objects file
[0.151s][info][class,load] org.springframework.beans.factory.HierarchicalBeanFactory source: shared objects file
[0.151s][info][class,load] org.springframework.context.MessageSource source: shared objects file
```

If the AOT cache cannot be enabled or if you have a large number of classes that are not loaded from
the cache, make sure that the following conditions are fulfilled when creating and using the cache:

- The very same JVM must be used.
- The classpath must be specified as a JAR or a list of JARs, and avoid the usage of directories and `*` wildcard characters.
- The timestamps of the JARs must be preserved.
- When using the cache, the classpath must be the same as the one used to create it, in the same order.
Additional JARs or directories can be specified **at the end** (but will not be cached).
